@@ -792,6 +792,32 @@ class Base:
         command = self.subst(command)
         return function(self, os.popen(command).read())
 
+    def ParseDepends(self, filename, must_exist=None):
+        """
+        Parse a mkdep-style file for explicit dependencies.  This is
+        completely abusable, and should be unnecessary in the "normal"
+        case of proper SCons configuration, but it may help make
+        the transition from a Make hierarchy easier for some people
+        to swallow.  It can also be genuinely useful when using a tool
+        that can write a .d file, but for which writing a scanner would
+        be too complicated.
+        """
+        try:
+            fp = open(filename, 'r')
+        except IOError:
+            if must_exist:
+                raise
+            return
+        for line in SCons.Util.LogicalLines(fp).readlines():
+            if line[0] == '#':
+                continue
+            try:
+                target, depends = string.split(line, ':', 1)
+            except:
+                pass
+            else:
+                self.Depends(string.split(target), string.split(depends))
+
     def Platform(self, platform):
         platform = self.subst(platform)
         return SCons.Platform.Platform(platform)(self)
